Adding a base MVC and Web API controller that contains common definition  of properties that are used for managing Hub connections.

--- a/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
@@ -182,6 +182,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Communication\Hubs\TraceHub.cs" />
+    <Compile Include="Infrastructure\Mvc\BaseMvcHubController.cs" />
+    <Compile Include="Infrastructure\WebApi\BaseWebApiHubController.cs" />
     <Compile Include="Models\ValueProviders\RequestHeaderValueProvider.cs" />
     <Compile Include="Models\ValueProviders\RequestHeaderValueProviderFactory.cs" />
     <Compile Include="Models\Maps\RequestHeaderMap.cs" />
