Adding a broadcaster class that is responsible for emitting connection messages to connected clients of the Hub.

--- a/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Communication\Hubs\ConnectionBroadcaster.cs" />
     <Compile Include="Infrastructure\Communication\Hubs\TraceHub.cs" />
     <Compile Include="Infrastructure\Mvc\BaseMvcHubController.cs" />
     <Compile Include="Infrastructure\WebApi\BaseWebApiHubController.cs" />
