--- a/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
@@ -177,7 +177,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\Mvc\HomeController.cs" />
-    <Compile Include="Controllers\HumanController.cs" />
+    <Compile Include="Controllers\WebApi\HumanApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
