Owin'izing the project with a Startup.cs file.

--- a/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/ZM.SignalR.Integrations.WebApiMvc.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Models\HumanRequest.cs" />
     <Compile Include="Models\HumanResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
