Making flames, burning down some things. Lots of destruction and reconstruction.

--- a/src/ZM.SignalR.Integrations.WebApiMvc/Views/Web.config
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="ZM.SignalR.WebApi" />
+        <add namespace="ZM.SignalR.Integrations.WebApiMvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
